<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/lytDate"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchCity"
            android:layout_weight="0.3"
            android:background="@color/white"
            android:src="@drawable/ic_calendar_icon" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnTime"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/searchCity"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/btnDate"
            android:layout_weight="0.7"
            android:text="Date"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytTime"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/btnTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDate"
            android:layout_weight="0.3"
            android:background="@color/lightgrey"
            android:src="@drawable/ic_clock_icon" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_above="@+id/imgPerson"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnTime"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/btnTime"
            android:text="Time"
            android:textSize="18dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imgPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTime"
            android:layout_weight="0.3"
            android:src="@drawable/ic_user_icon" />

        <EditText
            android:id="@+id/numberPersons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_alignBottom="@+id/imgPerson"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/imgPerson"
            android:hint="Aantal personen"
            android:inputType="numberSigned" />


    </LinearLayout>

    <Button
        android:id="@+id/btnReserveer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberPersons"
        android:layout_marginTop="40dp"
        android:background="@color/mint_green"
        android:text="Reserveer" />

</LinearLayout>