<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/reserveren"
        android:title="Reserveren" />
    <item android:id="@+id/login"
        android:title="@string/login"
        android:visible="false"/>
    <item android:id="@+id/myProfile"
        android:title="@string/myProfile"
        android:visible="false"/>
    <item android:id="@+id/myFavorites"
        android:title="@string/myFavorites"
        android:visible="false"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:visible="false"/>
    <item android:id="@+id/about"
        android:title="Over ons" />
</menu>