...
                android:layout_weight="0.9"
                />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnFavorites"
                android:layout_weight="0.1"
                android:src="@drawable/ic_favorite"
                android:background="@color/white"
                android:layout_marginTop="5dp"/>


...
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnReserveren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutImage3"
            android:background="@drawable/nav_button_styles"
            android:text="Reserveren"
            />
...
